--- a/Writings/thesis.org
+++ b/Writings/thesis.org
@@ -1,52 +1,24 @@
 #  -*- mode: org; org-latex-title-command: ""; org-latex-toc-command: "" -*-
-#+LATEX_CLASS_OPTIONS:[12pt,openright,oneside,a4paper,brazil,english]
+#+LATEX_CLASS: tese
+#+LATEX_CLASS_OPTIONS: [12pt,openright,oneside,a4paper,brazil,english]
 #+EXCLUDE_TAGS: journal noexport
-#+setupfile: ./thesis.setup
+#+setupfile: thesis.setup
+#+DATE: 2024
+#+TITLE: Teste de título
 
-
-* Frontmatter :ignore:
-#+BEGIN_EXPORT latex
-\frontmatter
-#+END_EXPORT
-
-
-* Mainmatter :ignore:
-
-#+BEGIN_EXPORT latex
-\tableofcontents
-\mainmatter
-#+END_EXPORT
+#+INCLUDE: ./abnt/_pretextual.org
 
 
 * A Research Chapter
-:PROPERTIES:
-:ALT_TITLE: Paper
-:END:
 
 
-* Appendix :ignore:
-
-#+latex: \appendix
-
-* COMMENT Acknowledgments
-:PROPERTIES:
-:UNNUMBERED: t
-:END:
-
-
-* Build :noexport:
+ Build :noexport:
 
 Bind derivatives change variable values *locally* on export.
 
 These two are because I'm defining the title and toc manually using latex, so I don't want org-latex to take care of that.
 #+BIND: org-latex-title-command ""
 #+BIND: org-latex-toc-command ""
-This is so that src code blocks get src highlighting from the minted package.
-#+BIND: org-latex-listings minted
-This beautifies table borders. It will only work if the booktabs package is loaded, which I do in the setup file.
-#+BIND: org-latex-tables-booktabs t
-And this configuration increases the default width of images, so that they are larger and more readable on print.
-#+BIND: org-latex-image-default-width ".97\\linewidth"
 
 # Local Variables:
 # mode: org
