Fixing two main language error.

--- a/Writings/thesis.tex
+++ b/Writings/thesis.tex
@@ -1,6 +1,6 @@
-% Created 2020-09-09 qua 12:00
+% Created 2020-09-09 qua 12:11
 % Intended LaTeX compiler: pdflatex
-\documentclass[12pt,openright,oneside,a4paper,brazil,english,sumario=tradicional]{gpsabntex}
+\documentclass[12pt,openright,oneside,a4paper,brazil,main=english,sumario=tradicional]{gpsabntex}
   \usepackage{lipsum}             % Pacote que gera texto dummy
 \usepackage{blindtext}          % Pacote que gera texto dummy
 \usepackage{array}
@@ -76,7 +76,7 @@ maxcitenames=3]{biblatex}
 \usepackage{titlesec}
 \usepackage{csquotes}
 \usepackage[protrusion = true, final]{microtype}   % To avoid overfull hbox
-\emergencystretch=1.5em   % To avoid overfull hbox
+\emergencystretch=1.5em   % To avoid overfull hbox: https://tex.stackexchange.com/questions/20585/fixing-an-overfull-box
 \setlength{\parskip}{\onelineskip}
 \usepackage{mathptmx}
 \renewcommand{\ABNTEXchapterfont}{\rmfamily\bfseries}
@@ -285,5 +285,5 @@ Conclui-se que a taxa própria de juros dos imóveis explica a taxa de crescimen
 
 
 \chapter[Paper]{A Research Chapter}
-\label{sec:org06e5796}
+\label{sec:org12f8bed}
 \end{document}
