Removido babel para português. Criado template de artigo. Testado um capítulo

--- a/Writings/thesis.tex
+++ b/Writings/thesis.tex
@@ -1,6 +1,6 @@
-% Created 2020-09-09 qua 12:11
+% Created 2020-09-09 qua 16:22
 % Intended LaTeX compiler: pdflatex
-\documentclass[12pt,openright,oneside,a4paper,brazil,main=english,sumario=tradicional]{gpsabntex}
+\documentclass[12pt,openright,oneside,a4paper,english,sumario=tradicional]{gpsabntex}
   \usepackage{lipsum}             % Pacote que gera texto dummy
 \usepackage{blindtext}          % Pacote que gera texto dummy
 \usepackage{array}
@@ -284,6 +284,16 @@ Conclui-se que a taxa própria de juros dos imóveis explica a taxa de crescimen
 \renewcommand{\thepage}{\arabic{page}}  % Setting the page output to arabic   -- not necessary, unless `book` class and `\frontmatter` is used.
 
 
-\chapter[Paper]{A Research Chapter}
-\label{sec:org12f8bed}
+\chapter{Capítulo QCA}
+\label{sec:orga981810}
+
+\section{Introduction}
+\label{sec:org89cf794}
+
+\section{Methods}
+\label{sec:org7598365}
+
+\section{Conclusion}
+\label{sec:orgb001dc3}
+\appendix
 \end{document}
