Tried to use #+TITLE attribute.

--- a/Writings/thesis.tex
+++ b/Writings/thesis.tex
@@ -1,4 +1,4 @@
-% Created 2020-09-09 qua 16:22
+% Created 2020-09-09 qua 20:55
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt,openright,oneside,a4paper,english,sumario=tradicional]{gpsabntex}
   \usepackage{lipsum}             % Pacote que gera texto dummy
@@ -152,7 +152,7 @@ Instituto de Economia
 \titulo{Teste}
 \orientador{Lucas Azeredo da Silva Teixeira}
 \coorientador{Ivette Raymunda Luna Huamani}
-\newcommand{\ThesisTitle}{{Teste de Título}}
+\newcommand{\ThesisTitle}{{Three Essays in Housing Macroeconomics}}
 \author{Gabriel Petrini da Silveira}
 \date{2024}
 \title{}
@@ -285,15 +285,15 @@ Conclui-se que a taxa própria de juros dos imóveis explica a taxa de crescimen
 
 
 \chapter{Capítulo QCA}
-\label{sec:orga981810}
+\label{sec:org3d46169}
 
 \section{Introduction}
-\label{sec:org89cf794}
+\label{sec:org40bf5e0}
 
 \section{Methods}
-\label{sec:org7598365}
+\label{sec:orgea61dd0}
 
 \section{Conclusion}
-\label{sec:orgb001dc3}
+\label{sec:org677543a}
 \appendix
 \end{document}
